# monty-rust-python-template

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml
src/python_binding/: mod.rs
tests/: conftest.py
