[package]
name = "{{project}}"
description = "{{description}}"
license = "{{spdx_license_identifier}}"
version = "{{version}}"
repository = "https://github.com/{{github_login}}/{{project}}"
rust-version = "{{min_version_of['rust']}}"
edition = "2021"

[lib]
name = "{{project}}"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "^0.27.1"
features = ["extension-module"]
optional = true

[build-dependencies]
pyo3-build-config = "^0.27.1"

[features]
python_binding = ["dep:pyo3"]
