[project]
name = "{{project}}"
description = "{{description}}"
authors = [{ name = "{{full_name}}", email = "{{email}}" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "{{trove_license_classifier}}",
{% for minor in range(min_version_of['python'].split('.')[1]|int, (max_version_of['python'].split('.')[1])|int + 1) %}
    "Programming Language :: Python :: 3.{{minor}}",
{% endfor %}
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
requires-python = ">={{min_version_of['python']}}"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
docs = [
    "Sphinx>=7.2.6,<9.0",
    "sphinx-rtd-theme>=2.0.0,<3.0"
]
tests = [
    "hypothesis>=6.148.2,<7.0",
    "pytest>=9.0.1,<10.0",
]

[build-system]
requires = [
    "setuptools-rust>=1.12.0,<2.0; platform_python_implementation=='CPython'",
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "{{version}}"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []
files = [
    { "filename" = "docker-compose.cpython.yml" },
    { "filename" = "docker-compose.pypy.yml" },
    { "filename" = "{{project}}/__init__.py" },
]

[tool.coverage.run]
source = ["{{project}}"]

[tool.pytest.ini_options]
addopts = "--verbose -s --hypothesis-profile=default"

[tool.ruff]
line-length = 79

[tool.ruff.format]
docstring-code-format = true
quote-style = "single"
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    # flake8-bugbear
    "B",
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # pyupgrade
    "UP",
]
ignore = [
    "E203", # Whitespace before ':'
]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
known-local-folder = ["tests"]
relative-imports-order = "closest-to-furthest"
split-on-trailing-comma = false

[tool.setuptools.dynamic]
version = { attr = "{{project}}.__version__" }
